tests/semantic/fail/infered-declaration1.tiger
let
	var x := 1 + "a"
in
end
